# procesamiento_multimedia_q4_monica_carranza

EjercicioHUFFMAN/: huffman.cpp  huffman_tabla.txt  output_resultado.txt
EjercicioMedianCut/: mediancut.cpp
EjercicioOrderedDithering/: .gitignore  CMakeLists.txt  ordered.cpp  test.py
